added shopping cart icon and link

--- a/public/style.css
+++ b/public/style.css
@@ -37,4 +37,10 @@ form div {
 
 .siteName {
   font-size: x-large;
+  margin-right: 20px;
+}
+
+.shoppingCart {
+  font-size: 25px;
+  color: white;
 }
