--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,18 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.cartItem {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.cartPrice {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cartPrice > span {
+  margin-right: 20px;
+}
