--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,9 @@
 body {
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  /* font-family: Comic Sans MS; */
+  /* font-family: Chalkduster; */
+  /* font-family: Stencil Std; */
+  font-family: Marker Felt;
 }
 
 a {
