--- a/public/style.css
+++ b/public/style.css
@@ -62,6 +62,7 @@ form div {
   padding-left: 20px;
   padding-right: 20px;
   min-width: 100px;
+  z-index: 2;
 }
 
 .navBar {
@@ -110,4 +111,93 @@ form > select {
 .shoppingCart {
   font-size: 25px;
   color: white;
+}
+
+.welcomePhoto {
+  width: 100%;
+  height: 575px;
+}
+
+/* Container holding the image and the text */
+.welcomePhotoContainer {
+  position: relative;
+  text-align: center;
+  color: white;
+  z-index: -1;
+}
+
+/* Bottom right text */
+.bottom-right {
+  font-family: Marker Felt;
+  text-shadow: 2px 2px rgb(0, 0, 0);
+  font-size: 18px;
+  position: absolute;
+  bottom: 160px;
+  right: 160px;
+}
+
+/* Centered text */
+.centered {
+  text-shadow: 3px 3px rgb(0, 0, 0);
+  font-family: Marker Felt;
+  font-size: 35px;
+  position: absolute;
+  top: 28%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.sampleHobbies {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* border-style: dashed; */
+}
+
+.sampleHobby {
+  min-width: 250px;
+  max-width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  background-color: cadetblue;
+  justify-content: space-evenly;
+  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,
+    rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  transition: all 500ms;
+}
+
+.sampleHobby:hover {
+  box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em,
+    rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
+  transform: translateY(-3px) scale(1.025);
+}
+
+.sampleHobby h6 {
+  min-width: 100%;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  /* border-style: solid; */
+  font-size: 20px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+
+.sampleHobbyPhoto {
+  max-width: 200px;
+}
+
+.welcomeText {
+  font-size: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.sampleHeading {
+  display: flex;
+  justify-content: center;
 }
