--- a/public/style.css
+++ b/public/style.css
@@ -124,6 +124,7 @@ form > select {
   text-align: center;
   color: white;
   z-index: -1;
+  margin-bottom: 30px;
 }
 
 /* Bottom right text */
@@ -147,11 +148,15 @@ form > select {
   transform: translate(-50%, -50%);
 }
 
+.sampleContainer {
+  width: 100%;
+}
+
 .sampleHobbies {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* border-style: dashed; */
+  width: 100%;
 }
 
 .sampleHobby {
@@ -193,11 +198,28 @@ form > select {
 
 .welcomeText {
   font-size: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+  text-align: center;
+  width: 815px;
 }
 
 .sampleHeading {
   display: flex;
   justify-content: center;
 }
+
+.landingPageContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.separator {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+/*
+a {
+  color: inherit;
+}  */
